# tauri-vite-starter

./: CHANGELOG.md  index.html  package.json  tailwind.config.js  vite.config.ts
.changeset/: yellow-frogs-change.md
.github/workflows/: publish.yaml  release.yaml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  db.sqlite  diesel.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/migrations/2024-09-23-121307_create_posts/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/models/: user.rs
src/components/: dashboard-nav.tsx  theme-provider.tsx
src/components/forms/: user-auth-form.tsx
src/components/layout/: mobile-sidebar.tsx  page-container.tsx
src/routes/: index.lazy.tsx
